app/assets/stylesheets/_forms.scss
// =============================================================================
// FORMS
// =============================================================================


input[type="text"],
input[type="email"],
input[type="password"],
input[type="number"] {
  @include placeholder-style(italic);
  background-color: transparent;
  font-family: $sans;
  font-size: 100%;
  border: none;
  border-bottom: 1px solid $gray2;
  padding: 0 5px;
  height: 30px;
  outline: 0 !important;
}

textarea {
  @include placeholder-style(italic);
  font-family: $sans;
  font-size: 100%;
}


label {
  color: $gray3;
  line-height: 40px;
  text-transform: uppercase;
  min-height: 40px;
  display: inline-block;
  vertical-align: middle;
}

.value {
  padding-top: 5px;

  &.annotation {
    font-size: 80%;
    color: $gray3;
    max-width: 250px;
    padding-top: 10px;
  }
}

// Checkboxes ---------------------------------------------------------//

input[type="checkbox"] {
  display: none;

  & + label {
    color: $black;
    display: table;
    position: relative;
    margin-left: 32px;
    margin-bottom: 10px;
    cursor: pointer;

    &:before {
      content: '';
      font-family: $sans;
      color: $white;
      font-weight: 300;
      font-size: 12px;
      line-height: 15px;
      text-align: center;
      width: 18px;
      height:18px;
      background: none;
      border: 2px solid $black;
      top: 10px;
      left: -32px;
      position: absolute;
      border-radius: 2px;
      transition: all 0.4s;
    }
    &.inline {
      display: inline-block;
      margin-right: 10px;
    }
  }
  &:checked + label:before {
    content: '\2714';
    background: $black;

  }
  &.disabled + label,
  &[disabled] + label,
  fieldset[disabled]  + label {
    cursor: not-allowed;
    pointer-events: none; // Future-proof disabling of clicks
    opacity: .35;
  }
}


// Radio buttons ---------------------------------------------------------//


input[type="radio"] {
  display: none;

  & + label {
    color: $black;
    display: table;
    position: relative;
    margin-left: 32px;
    margin-bottom: 10px;
    cursor: pointer;

    &:before {
      content: '';
      font-family: $sans;
      color: $white;
      font-weight: 300;
      font-size: 12px;
      line-height: 14px;
      text-align: center;
      width: 18px;
      height:18px;
      background: none;
      border: 2px solid $black;
      top: 10px;
      left: -32px;
      position: absolute;
      border-radius: 50%;
      transition: all 0.4s;
    }
    &:after {
      content: '';
      background: $black;
      width: 10px;
      height: 10px;
      position: absolute;
      left: -28px;
      top: 14px;
      border-radius: 50%;
      opacity: 0;
      transition: all 0.4s;
    }
    &.inline {
      display: inline-block;
      margin-right: 10px;
    }
  }
  &:checked + label:after {
    opacity: 1;
  }
  &.disabled + label,
  &[disabled] + label,
  fieldset[disabled]  + label {
    cursor: not-allowed;
    pointer-events: none; // Future-proof disabling of clicks
    opacity: .35;
  }
}


// Input email & password for Devise ---------------------------------------------------------//

body.devise {
  input[type="email"],
  input[type="password"] {

    @include placeholder($sans, 25px);
    background: image-url('ic-login.png') no-repeat $white;

    &.filled {
      background: $white;
    }
  }

  input[type="email"] {
    background-position: left top;
  }

  input[type="password"] {
    background-position: left -40px;
  }
}

.small-quote {
  font-size: 70%;
  color: $gray3;
  font-style: italic;
  position: absolute;
}




// Input text & Area sizes ---------------------------------------------------------//


.input-xx-small {
  width: 20px !important;
}
.input-x-small {
  width: 40px;
}
.input-small {
  width: 70px;
}
.input-medium {
  width: 150px;
}
.input-large {
  width: 200px;
}
.input-x-large {
  width: 250px;
}
.input-xx-large {
  width: 400px;
}
.input-block {
  width: 100%;
}

